feat: fix validation

--- a/resources/scss/modification.scss
+++ b/resources/scss/modification.scss
@@ -26,7 +26,7 @@
 
 .app-bg {
     background-image: url('../img/bg.PNG');
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
 }
 
